tests/invalid/reserved_name_get.prsm
// E101: 'get' is a reserved built-in method name
component Foo : MonoBehaviour {
    func get() {}
}
